--- a/src/components/hud/RunInfo.css
+++ b/src/components/hud/RunInfo.css
@@ -156,7 +156,7 @@
 .run-info-voucher-empty {
   margin: 0;
   padding: 0.6rem;
-  color: #868e96;
+  color: #495057;
   font-style: italic;
   text-align: center;
 }
