--- a/src/components/jokers/Jokers.css
+++ b/src/components/jokers/Jokers.css
@@ -115,7 +115,7 @@
   background-color: #fff3bf;
   border-style: dashed;
   border-color: #f1c40f;
-  color: #868e96;
+  color: #495057;
   font-style: italic;
   font-size: 0.85rem;
 }
